pl and py , list and dict/hash

--- a/test_perf/Makefile
+++ b/test_perf/Makefile
@@ -2,7 +2,10 @@
 ALL := test_arith.out
 ALL += test_arith_g.out
 ALL += test_arith_pg.out
-ALL += test_arith.py.out
+ALL += test_arith_dict.py.out
+ALL += test_arith_list.py.out
+ALL += test_arith_hash.pl.out
+ALL += test_arith_list.pl.out
 
 .PHONY : $(ALL)
 test : $(ALL)
